Changelog
=========

1.0b3 - Unreleased
------------------

* Add adapter for previous/next support that doesn't need the catalog.
  [witsch]

* Remove `getObjPositionInParent` catalog index and use a sort index based
  on the folder's order information instead.
  [witsch]


1.0b2 - Released January 28, 2010
---------------------------------

* Add `IATBTreeFolder` to `implements` list of `ATFolder` replacement.
  [thet]


1.0b1 - Released Nov 15, 2009
-----------------------------

* Copy the `index_html` method from `ATContentTypes` to better support WebDAV.
  [davisagli]

* Add in-place migration code.
  [witsch]

* Work around imports no longer present in Plone 4.0.
  [witsch]

* (Briefly) document the `plone.app.folder.tests.bbb` usage.
  [wichert]


1.0a1 - Released May 7, 2009
----------------------------

* Initial release as factored out from `plone.folder`.
  [witsch]